border collapse-card correction

--- a/src/assets/styles/card-contener.scss
+++ b/src/assets/styles/card-contener.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 20px;
   border-radius: 25px;
+  margin: 50px 0;
 
   article {
     aspect-ratio: 1 / 1;
