--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,10 +1,12 @@
 #layout {
-  padding: 0 20px 0 20px;
   .layout-content {
+    padding: 0 20px 0 20px;
     max-width: 1240px;
     margin: auto;
   }
   @media (min-width: 768px) {
-    padding: 0 40px 0 40px;
+    .layout-content {
+      padding: 0 40px 0 40px;
+    }
   }
 }
