--- a/src/assets/styles/location-page.scss
+++ b/src/assets/styles/location-page.scss
@@ -61,6 +61,7 @@
     grid-area: item4;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     gap: 10px;
 
     p {
